--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-json-csv": "^2.1.0",
     "vue-router": "^4.0.3",
     "vue3-toastify": "^0.1.11",
     "vuex": "^4.0.0"
