--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-json-csv": "^2.1.0",
     "vue-router": "^4.0.3",
     "vue3-toastify": "^0.1.11",
